--- a/src/components/Header_LP.astro
+++ b/src/components/Header_LP.astro
@@ -49,10 +49,10 @@ import { Image } from "astro:assets";
       <a href="/" aria-label="Aller à l'accueil">
         <Image
           src="/public/icon/logo.png"
-          alt="TaVue logo"
+          alt="Logo TaVue"
           width={24}
           height={10}
-          class="w-24 h-10 lg:w-36 lg:h-16 object-contain"
+          class="w-24 lg:w-25 object-contain"
           loading="lazy"
         />
       </a>
@@ -63,32 +63,30 @@ import { Image } from "astro:assets";
         <li>
           <a
             href="/generator"
-            class="btn btn-ghost rounded text-2xl hover:bg-secondary hover:text-secondary-content"
+            class="btn btn-ghost rounded text-xl font-semibold hover:bg-secondary hover:text-secondary-content hover:font-bold"
             >Créer ma paire</a
           >
         </li>
         <li>
           <a
             href="/gallery"
-            class="btn btn-ghost rounded text-2xl hover:bg-secondary hover:text-secondary-content"
+            class="btn btn-ghost rounded text-xl font-semibold hover:bg-secondary hover:text-secondary-content hover:font-bold"
             >Galerie</a
           >
         </li>
       </ul>
     </div>
 
-    <div class="navbar-end hidden lg:flex">
-      <form method="POST" action="/api2/logout">
-        <button
-          type="submit"
-          class="btn btn-outline btn-xl bg-accent text-accent-content"
-          >Déconnexion</button
+    <div class="navbar-end hidden lg:flex gap-2">
+      <form method="POST" action="/login">
+        <button class="btn btn-outline btn-lg bg-accent text-accent-content"
+          >Connexion</button
         >
       </form>
-      <form method="POST" action="/login">
-        <button
-          class="btn btn-outline btn-xl bg-accent text-accent-content"
-          >Connexion</button>
+      <form method="POST" action="/api2/logout">
+        <button class="btn btn-outline btn-lg bg-accent text-accent-content"
+          >Déconnexion</button
+        >
       </form>
     </div>
   </nav>
