--- a/src/pages/accueil/index.astro
+++ b/src/pages/accueil/index.astro
@@ -29,7 +29,7 @@ const featuredProducts = [
   <main class="bg-base-100 text-base-content overflow-hidden">
     <!-- 🌅 Section Hero -->
     <section
-      class="relative flex flex-col items-center bg-gradient-to-b from-primary/10 to-base-100 text-center px-10 lg:px-20 pb-5 lg:pb-10"
+      class="relative flex flex-col items-center bg-gradient-to-b from-primary/10 to-base-100 text-center px-10 lg:px-20 pb-5 lg:pb-5"
     >
       <div class="mt-10 mb-5 lg:mb-10 lg:mt-20">
         <h1 class="md:text-5xl lg:text-6xl font-extrabold text-primary mb-4">
@@ -61,7 +61,7 @@ const featuredProducts = [
       id="features"
       class="p-10 pt-0 lg:p-20 lg:pt-0 bg-base-100 text-center"
     >
-      <h2 class="lg:text-4xl font-bold text-primary mb-12">
+      <h2 class="lg:text-4xl font-bold text-primary mb-6">
         Pourquoi <span class="text-secondary">Tu vas adorer</span> TaVue
       </h2>
 
@@ -121,7 +121,7 @@ const featuredProducts = [
     </section>
 
     <!-- 💬 Témoignages -->
-    <section class="container mx-auto px-6 py-20 text-center">
+    <section class="container mx-auto px-6 py-15 text-center">
       <h2 class="lg:text-4xl font-bold text-primary mb-10">
         Ils adorent leur nouvelle vue
       </h2>
@@ -143,7 +143,7 @@ const featuredProducts = [
 
     <!-- ⚡ CTA final -->
     <section
-      class="p-10 lg:p-20 bg-gradient-to-r from-primary/90 to-secondary/90 text-center text-primary-content"
+      class="p-10 lg:p-20 bg-secondary text-center text-primary-content"
     >
       <h2 class="lg:text-4xl font-bold mb-6">Prêt à redéfinir ton regard ?</h2>
       <p class="mb-8 text-sm lg:text-base opacity-90">
